# martins

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  update-tap.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: tmux-selection-fills-pane.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/notes/: 2026-04-24-tela-principal-seletor-tmux.md
.planning/reports/: MILESTONE_SUMMARY-v1.0.md
.planning/seeds/: SEED-001-tmux-native-selector-main-pane.md
.sisyphus/: boulder.json
.sisyphus/evidence/: final-f3-04-modal-wait.txt  final-f3-05-new-ws.txt  final-f3-06-ws-created.txt  final-f3-08-archived2.txt  final-f3-09-persistence.txt  final-f3-not-repo.stderr  task-18-tabs.txt
.sisyphus/plans/: UI-SPEC.md  martins-tui.md
Formula/: martins.rb
resources/: ascii-art.txt
src/: agents.rs  app.rs  app_tests.rs  cli.rs  config.rs  editor.rs  error.rs  events.rs  keys.rs  logging.rs  main.rs  mpb.rs  navigation_tests.rs  pty_input_tests.rs  selection_tests.rs  state.rs  tmux.rs  tmux_native_selection_tests.rs  tools.rs  watcher.rs  workspace.rs
src/git/: diff.rs  mod.rs  repo.rs  worktree.rs
src/pty/: manager.rs  mod.rs  session.rs
src/ui/: draw.rs  layout.rs  mod.rs  modal.rs  (+7 more)
(+100 files in other folders)
