[package]
name = "martins"
version = "0.3.2"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Terminal workspace manager for AI coding agents"
repository = "https://github.com/lucasbayma/martins"
homepage = "https://github.com/lucasbayma/martins"
keywords = ["tui", "terminal", "ai", "workspace", "tmux"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
tui-term = { version = "0.3.4", features = ["unstable"] }
vt100 = "0.16"
portable-pty = "0.9"
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"
git2 = "0.17"
notify = "8.2"
notify-debouncer-mini = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
which = "6"
sha2 = "0.10"
fastrand = "2"
unicode-normalization = "0.1"
nucleo-matcher = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
anyhow = "1"
thiserror = "1"

[dev-dependencies]
insta = "1.40"
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3"
